# job-pool

./: .gitignore  CHANGELOG  Makefile  README.md  pyproject.toml
.github/workflows/: auto_release.yml  coverage.yml  publish_release.yml
job_pool/: __init__.py  job_pool.py  tqdm_logger.py
tests/integration_tests/: test_docker_oom_killer.py  test_docker_oom_killer.sh  test_memory_usage.py  test_shared_memory.py
tests/unit_tests/: test_job_pool.py
