[tool.poetry]
name = "job-pool"
version = "0.3.4"
description = "Enhanced Job Pool for Python Multiprocessing"
authors = ["Matthew The <matthew.the@tum.de>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    {include = "job_pool"},
    {include = "tests", format = "sdist"},
]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.66.1"
threadpoolctl = "^3.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.14.0"
pandas = ">=1.4.2"
psutil = "^7.0.0"
pyarrow = ">=14.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
